objects/ImageSizeforBillboardMaterialItem__c/ImageSizeforBillboardMaterialItem__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Image Size for Billboard &amp; Material Old</label>
</CustomObject>