objects/ImageSizeforBillboardMaterialItem__c/fields/Billboard_Photo_1_Width__c.field-meta.xml
<CustomField>
    <fullName>Billboard_Photo_1_Width__c</fullName>
    <label>Billboard Photo 1 Width</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>