objects/ImageSizeforBillboardMaterialItem__c/fields/Billboard_Photo_2_Width__c.field-meta.xml
<CustomField>
    <fullName>Billboard_Photo_2_Width__c</fullName>
    <label>Billboard Photo 2 Width</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>