objects/ImageSizeforBillboardMaterialItem__c/fields/MaterialItem_File_Height__c.field-meta.xml
<CustomField>
    <fullName>MaterialItem_File_Height__c</fullName>
    <label>MaterialItem File Height</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>